--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="verde">#90A955</color>
-
+    <color name="green">#90A955</color>
+    <color name="gray">#D9D9D9</color>
+    <color name="brown">#7F4F24</color>
 </resources>
+
+
